# termautomaton

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  meson.build  package.nix  rust-toolchain.toml  treefmt.toml
examples/: gosperglidergun.cells
src/: Grid.h  app.rs  automata.rs  cli.rs  fs_utils.rs  grid.rs  main.cc  main.rs  meson.build  rulesets.rs  state.rs  states.rs  window.rs
